--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# gradsu
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,11 +8,11 @@
 
 <div class="nav">
 
-
-	
-
-  
-
+<div class="content">
+	<a target="#" href="logo.png">
+	<img class="a" src="logo.png" alt="logo">
+</a>
+</div>
 
 
 
