--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="nav">
+<div class="topnav">
 
 <div class="content">
 	<a target="#" href="logo.png">
@@ -19,6 +19,41 @@
 
 </div>
 <div class="border"></div>
+
+<div class="row">
+  <div class="column side">
+    <a target="#" href="levi.jpg">
+	<img class="a" src="levi.jpg" alt="levi">
+</a>	
+  </div>
+  <div class="column middle">
+    <a target="#" href="hambi.jpg">
+	<img id="hambi" src="hambi.jpg" alt="hambi">
+	<div class="vesti-levo"></div>
+	<article class="laguna">
+		<div class="lagunabg">
+			<img src="laguna1.jpg">
+		</div>
+		<div class="naslov">
+		<a href="laguna">Najtrazeniji Lagunini naslovi na Sajmu</a>
+		<div class="comments">
+		<div class="text"><a class="comms" href="#">0</a></div>
+	</div>
+	</div>
+	
+	</article>
+
+	<div class="banner-right">
+		
+	</div>
+</a>
+  </div>
+  <div class="column side">
+    <a target="#" href="desni.jpg">
+	<img class="a" src="desni.jpg" alt="desni">
+</a>
+  </div>
+</div>
 
 
 
