--- a/index.html
+++ b/index.html
@@ -6,56 +6,169 @@
 </head>
 <body>
 
-<div class="topnav">
-
-<div class="content">
-	<a target="#" href="logo.png">
-	<img class="a" src="logo.png" alt="logo">
-</a>
+<div class="bdesno">
+	<div class="desnobg"><a href="#"><img src="desni.jpg"></a></div>
 </div>
 
-
-
-
+<div class="blevo">
+	<div class="levobg"><a href="#"><img src="levi.jpg"></a></div>
 </div>
-<div class="border"></div>
 
-<div class="row">
-  <div class="column side">
-    <a target="#" href="levi.jpg">
-	<img class="a" src="levi.jpg" alt="levi">
-</a>	
-  </div>
-  <div class="column middle">
-    <a target="#" href="hambi.jpg">
-	<img id="hambi" src="hambi.jpg" alt="hambi">
-	<div class="vesti-levo"></div>
-	<article class="laguna">
-		<div class="lagunabg">
-			<img src="laguna1.jpg">
+<div class="primary">
+	<div class="banner-top">
+		<div class="g">
+			<div class="g-single">
+				<a class="gofollow"><img src="hambi.jpg"></a>
+			</div>
 		</div>
-		<div class="naslov">
-		<a href="laguna">Najtrazeniji Lagunini naslovi na Sajmu</a>
-		<div class="comments">
-		<div class="text"><a class="comms" href="#">0</a></div>
 	</div>
+
+<div class="site-content">
+
+<div class="vesti-left">
+
+<article class="amain">
+<a href="#">
+	<div class="image"></div>
+</a>
+<div class="text">
+	<a href="#"></a>
+	<div class="naslov">
+	<a class="anaslov" href="#"></a>
+	<a class="anaslov" href="#">Usponema sa turneje po ostrvu</a>
+</div>
+</div>
+<div class="comments-number">
+	<a class="number" href="#">3</a>
+</div>
+</article>
+
+<article class="a1">
+	<a href="#">
+		<div class="imagea1"></div>
+	</a>
+
+	<div class="a1comments-number"><a class="number" href="#">1</a></div>
+
+	<div class="a1text">
+		<div class="a1naslov">
+			<a href="#">Skoro svaki cetvrti Suboticanin moze danas na glasanje</a>
+		</div>
 	</div>
+</article>
+
+<article class="a2">
 	
+<a href="#">
+	<div class="a2image"></div>
+</a>
+<div class="a2comments-number"><a class="number" href="#">9</a></div>
+
+	<div class="a2text">
+		<div class="a2naslov">
+			<a href="#">Sudar autobusa i automobila,jedna osoba poginula</a>
+		</div>
+	</div>
+</article>
+
+<article class="a3">
+	
+<a href="#">
+	<div class="a3image"></div>
+</a>
+<div class="a3comments-number"><a class="number" href="#">26</a></div>
+
+	<div class="a3text">
+		<div class="a3naslov">
+			<a href="#">Policaja na duznosti</a>
+		</div>
+	</div>
+</article>
+</div>
+
+<div class="banner-right">
+	<div class="banner-right1">
+		<div class="g3">
+			<div class="g3single">
+				<a class="gofollow" href="#">
+					<img class="lagunaimg" src="laguna.png"></a>
+				</div>
+			</div>
+			<p>--- reklama ---</p>
+		</div>
+
+<div class="comments">
+	<h2><a href="#">POSLEDNJI KOMENTARI</a></h2>
+	<hr>
+
+	<ul>
+		
+		<li><a href="#">@Lansky kao i uvek, odlicna tema</a><hr></li>
+		<li><a href="#">@ffilozoff Potpuno se slazem sa tvojom konstatacijom,...</a><hr></li>
+		<li><a href="#">@stormwatch A radis li ti nesto pamento</a><hr></li>
+		<li><a href="#">@Aguntura - stormwatch Od vas zlotvora konstatno...</a><hr></li>
+		<li><a href="#">ZASTO SE PROBROJAVAMO.STA CE TI NACIONALNI SAVETI,PA...</a><hr></li>
+		<li><a href="#">@stormwatch U pravu Ste,nazalost.Relativno...</a><hr></li>
+		<li><a href="#">Jedino zbog ovakvih stvari mi stariji Subo'cani...</a><hr></li>
+	</ul>
+</div>
+</div>
+
+<div class="clear"></div>
+
+<div class="site-content-event">
+	<div class="banner-budapes">
+		<div class="a-single">
+			<a class="gofollow"><img src="asd.png"></a>
+		</div>
+	</div>
+<div class="div-event">
+	<a href="#">DESAVANJA U GRADU</a>
+</div>
+
+<div class="event-content">
+	<article class="e1">
+		<a href="#">
+			<div class="event1-image">
+				<div class="gradient">
+					<span class="event-venue">Pozoriste Kostolanji Deze</span>
+					<span class="date">6.nov</span>
+					<span class="time">19:30</span>
+					<h4 class="event-name">Premijera</h4>
+				</div>
+			</div>
+		</a>
 	</article>
 
-	<div class="banner-right">
-		
-	</div>
-</a>
-  </div>
-  <div class="column side">
-    <a target="#" href="desni.jpg">
-	<img class="a" src="desni.jpg" alt="desni">
-</a>
-  </div>
+	<article class="e2">
+		<a href="#">
+			<div class="event2-image">
+				<div class="gradient">
+					<span class="event-venue">Gradska Biblioteka</span>
+					<span class="date2">7.nov</span>
+					<span class="time2">19:00</span>
+					<h4 class="event-name2">Promocija knjige</h4>
+				</div>
+			</div>
+		</a>
+	</article>
+
+	
+
+	
+
+
+
 </div>
 
 
+
+
+
+
+
+
+</div>
 
 </body>
 </html>
