--- a/galerija.html
+++ b/galerija.html
@@ -29,8 +29,8 @@
 	<div class="menu-glavni-container">
 		<ul class="menu">
 			<li class="li"><a class="amenu" href="index.html">NASLOVNA</a></li>
-			<li class="li"><a class="amenu" href="">VESTI</a></li>
-			<li class="li"><a class="amenu" href="">DESAVANJA</a></li>
+			<li class="li"><a class="amenu" href="vesti.html">VESTI</a></li>
+			<li class="li"><a class="amenu" href="desavanja.html">DESAVANJA</a></li>
 			<li class="li"><a class="amenu" href="galerija.html">GALERIJE</a></li>
 			<li class="li"><a class="amenu" href="">NEKRETNINE</a></li>
 			<li class="li"><a class="amenu" href="">PRODUKCIJA</a></li>
